--- a/package.json
+++ b/package.json
@@ -10,9 +10,26 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/core": "7.15.8",
+        "@babel/plugin-proposal-object-rest-spread": "7.15.6",
+        "@babel/plugin-syntax-dynamic-import": "7.8.3",
+        "@babel/plugin-transform-runtime": "7.15.8",
+        "@babel/preset-env": "7.15.8",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "webpack": "5.60.0",
+        "webpack-cli": "4.9.1"
+    },
+    "name": "blog-laravel9",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "git@github.com:Halroshov/blog-laravel9.git",
+    "author": "Halroshov <sakurakatsuya@outlook.com>",
+    "license": "MIT",
+    "dependencies": {
+        "@popperjs/core": "2.11.8",
+        "bootstrap": "^5.3.3"
     }
 }
