--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "license": "MIT",
     "dependencies": {
         "@popperjs/core": "2.11.8",
+        "blog-laravel9": "file:",
         "bootstrap": "^5.3.3"
     }
 }
